[package]
name = "kp2bs58"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
bs58 = "0.4.0"
clap = { version = "3.0.10", features = ["derive"] }
ed25519-dalek = "2.0.0"
serde = "1.0.133"
serde_json = "1.0.75"
